[package]
name = "ur_driver"
version = "0.1.0"
authors = ["endre90 <endre90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
r2r = { git = "https://github.com/sequenceplanner/r2r" }
failure = "0.1.5"
failure_derive = "0.1.5"
futures = "0.3.5"
bytes = "0.5.4"
hex = "0.4.2"
lazy_static = "1.4.0"
snailquote = "0.3.0"
